added link of GitHub

--- a/src/index.pug
+++ b/src/index.pug
@@ -76,7 +76,7 @@ html(lang="ja")
           .dataUnit_contents
             ul.dataUnit_links
               li
-                a(href="") GitHub
+                a(href="https://github.com/ymnkx/my-site") GitHub
             ul.dataUnit_links
               li
                 a(href="https://ja.parceljs.org/") Parcel
