updated og info

--- a/src/index.pug
+++ b/src/index.pug
@@ -1,7 +1,7 @@
 -
-  var pageTitle = "T_Y"
+  var pageTitle = "Tomohiro Yamanaka"
   var pageDescription = ""
-  var pageOgImage = "og.png"
+  var pageOgImage = "https://yamanakatomohiro.com/og.png"
   var pageUrl = "https://yamanakatomohiro.com"
 
 <!DOCTYPE html>
