--- a/src/index.pug
+++ b/src/index.pug
@@ -1,6 +1,6 @@
 -
   var pageTitle = "Tomohiro Yamanaka"
-  var pageDescription = ""
+  var pageDescription = "Front-end Engineer / Web Designer"
   var pageOgImage = "https://yamanakatomohiro.com/og.png"
   var pageUrl = "https://yamanakatomohiro.com"
 
@@ -61,9 +61,9 @@ html(lang="ja")
         .myName_effect#js-effect
       .dataSet
         .dataUnit
-          .dataUnit_name Tomohiro Yamanaka
+          .dataUnit_name= pageTitle
           .dataUnit_contents
-            p.dataUnit_info Web Designer / Front-end Engineer
+            p.dataUnit_info= pageDescription
             ul.dataUnit_links
               li
                 a(href="https://twitter.com/ymnkx") Twitter
